--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -55,6 +55,7 @@ body {
   color: var(--second-color);
   color: var(--white);
   background: #8350ed;
+  -webkit-text-stroke: 2px rgba(255, 153, 0, 1);
 }
 
 h1,
@@ -81,6 +82,7 @@ img {
 
 /*===== CLASS CSS ===== */
 #hero {
+  min-height: 100vh;
   width: 100%;
   padding-block: 50px;
   background: linear-gradient(180deg, #4c2de2 0%, #8350ed 100%);
@@ -110,29 +112,32 @@ img {
 #tokenomics {
   width: 100%;
   padding-block: 50px;
-  background: linear-gradient(180deg, #4c2de2 0%, #8350ed 100%);
+  background: url(../img/bg.png) center center no-repeat;
+  background-size: cover;
 
   .con {
     width: 100%;
     padding: 20px;
     border-radius: 12px;
     margin-inline: auto;
-    // background-color: #ff9900;
-    // border: 5px solid #8350ed;
 
-    @media (min-width: 700px) {
-      width: 500px;
-    }
+    // border: 5px solid #8350ed;
   }
 
   h1.title {
     font-size: 64px;
     line-height: 89px;
     color: #ffffff;
+    -webkit-text-stroke: 2px rgba(255, 153, 0, 1);
 
     @media (max-width: 700px) {
-      font-size: 55px;
-      word-break: break-all;
+      font-size: 40px;
+      line-height: 140%; // word-break: break-all;
     }
+  }
+
+  h2 {
+    font-size: 48px;
+    line-height: 67px;
   }
 }
