--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -52,8 +52,7 @@ body {
   font-size: var(--normal-font-size);
   color: var(--second-color);
   color: var(--white);
-  background: #8350ed;
-  -webkit-text-stroke: 2px rgb(255, 153, 0);
+  background: #4f2fe2;
 }
 
 h1,
@@ -80,58 +79,54 @@ img {
 
 /*===== CLASS CSS ===== */
 #hero {
-  min-height: 100vh;
   width: 100%;
-  padding-block: 50px;
-  background: linear-gradient(180deg, #4c2de2 0%, #8350ed 100%);
+  padding-block: 80px;
 }
 #hero h1.title {
-  font-style: normal;
-  font-weight: 400;
   font-size: 94px;
   line-height: 131px;
-  color: #ffffff;
 }
 @media (max-width: 700px) {
   #hero h1.title {
-    font-size: 50px;
-    line-height: 120%;
+    font-size: 48px;
+    line-height: 67px;
   }
 }
 #hero img {
-  max-width: 25rem;
+  width: 100%;
 }
-@media (max-width: 800px) {
+@media (min-width: 900px) {
   #hero img {
-    width: 100%;
+    width: 25rem;
   }
 }
 
-#tokenomics {
+main {
+  width: 100%;
+}
+main #about {
+  min-height: 100vh;
   width: 100%;
   padding-block: 50px;
-  background: url(../img/bg.png) center center no-repeat;
-  background-size: cover;
 }
-#tokenomics .con {
-  width: 100%;
-  padding: 20px;
-  border-radius: 12px;
-  margin-inline: auto;
-}
-#tokenomics h1.title {
+main #about h1.title {
+  font-weight: 400;
   font-size: 64px;
   line-height: 89px;
-  color: #ffffff;
-  -webkit-text-stroke: 2px rgb(255, 153, 0);
 }
 @media (max-width: 700px) {
-  #tokenomics h1.title {
+  main #about h1.title {
     font-size: 40px;
     line-height: 140%;
   }
 }
-#tokenomics h2 {
+main #about ul li {
   font-size: 48px;
   line-height: 67px;
+}
+@media (max-width: 700px) {
+  main #about ul li {
+    font-size: 28px;
+    line-height: 39px;
+  }
 }/*# sourceMappingURL=style.css.map */
