--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -54,8 +54,7 @@ body {
   font-size: var(--normal-font-size);
   color: var(--second-color);
   color: var(--white);
-  background: #8350ed;
-  -webkit-text-stroke: 2px rgba(255, 153, 0, 1);
+  background: #4f2fe2;
 }
 
 h1,
@@ -82,62 +81,56 @@ img {
 
 /*===== CLASS CSS ===== */
 #hero {
-  min-height: 100vh;
   width: 100%;
-  padding-block: 50px;
-  background: linear-gradient(180deg, #4c2de2 0%, #8350ed 100%);
+  padding-block: 80px;
 
   h1.title {
-    font-style: normal;
-    font-weight: 400;
     font-size: 94px;
     line-height: 131px;
-    color: #ffffff;
-
     @media (max-width: 700px) {
-      font-size: 50px;
-      line-height: 120%;
+      font-size: 48px;
+      line-height: 67px;
     }
   }
 
   img {
-    max-width: 25rem;
+    width: 100%;
 
-    @media (max-width: 800px) {
-      width: 100%;
+    @media (min-width: 900px) {
+      width: 25rem;
     }
   }
 }
 
-#tokenomics {
+main {
   width: 100%;
-  padding-block: 50px;
-  background: url(../img/bg.png) center center no-repeat;
-  background-size: cover;
 
-  .con {
+  #about {
+    min-height: 100vh;
     width: 100%;
-    padding: 20px;
-    border-radius: 12px;
-    margin-inline: auto;
+    padding-block: 50px;
 
-    // border: 5px solid #8350ed;
-  }
+    h1.title {
+      font-weight: 400;
+      font-size: 64px;
+      line-height: 89px;
 
-  h1.title {
-    font-size: 64px;
-    line-height: 89px;
-    color: #ffffff;
-    -webkit-text-stroke: 2px rgba(255, 153, 0, 1);
-
-    @media (max-width: 700px) {
-      font-size: 40px;
-      line-height: 140%; // word-break: break-all;
+      @media (max-width: 700px) {
+        font-size: 40px;
+        line-height: 140%;
+      }
     }
-  }
 
-  h2 {
-    font-size: 48px;
-    line-height: 67px;
+    ul {
+      li {
+        font-size: 48px;
+        line-height: 67px;
+
+        @media (max-width: 700px) {
+          font-size: 28px;
+          line-height: 39px;
+        }
+      }
+    }
   }
 }
