--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -171,3 +171,19 @@ main {
     }
   }
 }
+
+// #buy {
+//   min-height: 100vh;
+//   width: 100%;
+//   padding-block: 50px;
+
+//   h1.title {
+//     font-size: 64px;
+//     line-height: 89px;
+
+//     @media (max-width: 700px) {
+//       font-size: 40px;
+//       line-height: 56px;
+//     }
+//   }
+// }
